# stablex

./: Anchor.toml  README.md  package-lock.json  package.json
app/lib/: ammUtils.ts  constants.ts
components/: LaunchModal.tsx  Navbar.tsx  WalletConnectionProvider.tsx
deployments/: script_deploy.sh  script_initialize_vaults.ts  vault_config.json
pages/: _app.tsx  initialize-pools.tsx  pool.tsx  rates.tsx  swap.tsx
pages/api/: eur-usd-price.ts  gbp-usd-price.ts  price-history.ts  usd-sgd-price.ts
pages/pool/: [symbol].tsx
programs/fx_vault_dex/: Cargo.toml  README.md
programs/fx_vault_dex/src/: lib.rs
programs/fx_vault_dex/src/instructions/: deposit_liquidity.rs  distribute_incentives.rs  distribute_protocol_fees.rs  initialize_vault.rs  mod.rs  rebalance_vault.rs  swap.rs  withdraw_liquidity.rs
programs/fx_vault_dex/src/state/: constants.rs  lp_position.rs  mod.rs  reward_tracker.rs  vault_account.rs
programs/fx_vault_dex/src/utils/: fx_oracle.rs  math.rs  mod.rs
programs/stablex/: Cargo.toml  README.md
programs/stablex/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs
styles/: Home.module.css  globals.css
