[package]
name = "fx_vault_dex"
version = "0.1.0"
description = "FX-stablecoin vault DEX on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
solana-program = "1.16"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
thiserror = "1.0"
num-derive = "0.3"
num-traits = "0.2"
pyth-sdk-solana = "0.8.0" 