[package]
name = "stablex"
version = "0.1.0"
description = "FX-stablecoin DEX on Solana"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.16"
thiserror = "1.0"
spl-token = { version = "3.5", features = ["no-entrypoint"] }
borsh = "0.10"
borsh-derive = "0.10"
num-derive = "0.3"
num-traits = "0.2"
pyth-sdk-solana = "0.8.0"

[lib]
crate-type = ["cdylib", "lib"] 